# job-orchestrator

./: .gitignore  README.md  test-system.sh
coordinator/: rebar.config
coordinator/config/: sys.config  vm.args
coordinator/src/: coordinator.app.src  coordinator_app.erl  coordinator_sup.erl  event_logger.erl  job_queue.erl  leader_election.erl  scheduler_client.erl  tcp_listener.erl  worker_registry.erl
gateway/: shard.yml
gateway/src/: cli.cr  gateway.cr  server.cr
scheduler/: scheduler.py
scheduler/scheduler/: __init__.py  algorithm.py  scheduler.py  server.py  types.py
scheduler/tests/: test_scheduler.py
scripts/: build-all.sh
worker/: Cargo.toml
worker/src/: connection.rs  executor.rs  main.rs  protocol.rs  worker.rs
